--- a/settings.py.example
+++ b/settings.py.example
@@ -1,2 +1,3 @@
 DEBUG = True
 SQLALCHEMY_DATABASE_URI = "postgresql://user:passwd@localhost/dbname"
+SQLALCHEMY_DATABASE_URI_TEST= "postgresql://user:passwd@localhost/dbname"
