--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.0.2
 Flask-Migrate==2.2.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+flask-swagger==0.2.13
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
@@ -16,6 +17,7 @@ psycopg2-binary==2.7.5
 pycparser==2.18
 python-dateutil==2.7.3
 python-editor==1.0.3
+PyYAML==3.13
 six==1.11.0
 SQLAlchemy==1.2.10
 Werkzeug==0.14.1
